force-app/main/default/objects/Job_Applicants__c/Job_Applicants__c.object-meta.xml
<CustomObject>
    <label>Job Applicant</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Job Applicants Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>