force-app/main/default/objects/Job_Applicants__c/fields/Applicant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Notes__c</fullName>
    <label>Applicant Notes</label>
    <type>TextArea</type>
</CustomField>