force-app/main/default/objects/Job_Applicants__c/fields/Background_Check_Passed__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Background Check passed?</inlineHelpText>
    <label>Background Check Passed</label>
    <type>Checkbox</type>
</CustomField>