force-app/main/default/objects/Job_Applicants__c/fields/Candiate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candiate_Name__c</fullName>
    <formula>Candidate__r.FirstName + &quot; &quot; + Candidate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candiate Name</label>
    <type>Text</type>
</CustomField>