force-app/main/default/objects/Job_Applicants__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>