force-app/main/default/objects/Job_Applicants__c/fields/Current_Title__c.field-meta.xml
<CustomField>
    <fullName>Current_Title__c</fullName>
    <label>Current Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>