force-app/main/default/objects/Job_Applicants__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <label>Job Order</label>
    <referenceTo>Job_Order__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>