force-app/main/default/objects/Job_Applicants__c/fields/Manager_Experience__c.field-meta.xml
<CustomField>
    <fullName>Manager_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Experience</label>
    <type>Checkbox</type>
</CustomField>