force-app/main/default/objects/Job_Applicants__c/fields/Miles_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Miles_From_Location__c</fullName>
    <label>Miles From Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>