force-app/main/default/objects/Job_Applicants__c/fields/Other_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Other_Requirements__c</fullName>
    <label>Other Requirements</label>
    <type>TextArea</type>
</CustomField>