force-app/main/default/objects/Job_Applicants__c/fields/Remote_Work__c.field-meta.xml
<CustomField>
    <fullName>Remote_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Work</label>
    <type>Checkbox</type>
</CustomField>