force-app/main/default/objects/Job_Applicants__c/fields/Required_Education__c.field-meta.xml
<CustomField>
    <fullName>Required_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Education</label>
    <type>Checkbox</type>
</CustomField>