force-app/main/default/objects/Job_Applicants__c/fields/Short_List__c.field-meta.xml
<CustomField>
    <fullName>Short_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Short List</label>
    <type>Checkbox</type>
</CustomField>