force-app/main/default/objects/Job_Applicants__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skills Required</label>
    <type>Checkbox</type>
</CustomField>