force-app/main/default/objects/Job_Applicants__c/fields/Skills_Test__c.field-meta.xml
<CustomField>
    <fullName>Skills_Test__c</fullName>
    <label>Skills Test Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>