force-app/main/default/objects/Job_Applicants__c/fields/Submit__c.field-meta.xml
<CustomField>
    <fullName>Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to Hiring Manager</label>
    <type>Checkbox</type>
</CustomField>